--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -185,6 +185,20 @@
     <string name="brokenSiteReportBrokenSiteMenuItem">Defecte website melden</string>
     <string name="brokenSiteHeading">Een defecte website melden</string>
     <string name="brokenSiteSubmitted">Dank je wel! Feedback verzonden</string>
+    <string name="brokenSitesCategoriesTitle">Beschrijf wat er is gebeurd:</string>
+    <string name="brokenSitesCategoriesHint">Beschrijf wat er is gebeurd</string>
+    <string name="brokenSiteSubmitButton">Verzend Rapport</string>
+    <string name="brokenSiteDescription">Als u een anoniem rapport voor een gebroken site indient, kunnen we deze problemen oplossen en de app verbeteren.</string>
+
+    <string name="brokenSiteCategoryImages">Afbeeldingen zijn niet geladen</string>
+    <string name="brokenSiteCategoryPaywall">De site heeft me gevraagd om uit te schakelen</string>
+    <string name="brokenSiteCategoryComments">Opmerkingen zijn niet geladen</string>
+    <string name="brokenSiteCategoryVideos">Video werd niet afgespeeld</string>
+    <string name="brokenSiteCategoryLinks">Links of knoppen werken niet</string>
+    <string name="brokenSiteCategoryContent">Inhoud ontbreekt</string>
+    <string name="brokenSiteCategoryLogin">Ik kan niet inloggen</string>
+    <string name="brokenSiteCategoryUnsupported">De browser is niet compatibel</string>
+    <string name="brokenSiteCategoryOther">Iets anders</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Bladwijzers</string>
