--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -185,6 +185,20 @@
     <string name="brokenSiteReportBrokenSiteMenuItem">Denunciar falha no site</string>
     <string name="brokenSiteHeading">Denunciar uma falha no site</string>
     <string name="brokenSiteSubmitted">Obrigado! Comentário enviado</string>
+    <string name="brokenSitesCategoriesTitle">Descreva o que aconteceu:</string>
+    <string name="brokenSitesCategoriesHint">Descrever o que aconteceu</string>
+    <string name="brokenSiteSubmitButton">Enviar relatório</string>
+    <string name="brokenSiteDescription">O envio de um relatório anónimo de site com problemas ajuda-nos a depurar e a melhorar a aplicação.</string>
+
+    <string name="brokenSiteCategoryImages">As imagens não foram carregadas</string>
+    <string name="brokenSiteCategoryPaywall">O site pediu-me para desativar</string>
+    <string name="brokenSiteCategoryComments">Os comentários não foram carregados</string>
+    <string name="brokenSiteCategoryVideos">O vídeo não foi reproduzido</string>
+    <string name="brokenSiteCategoryLinks">Os links ou botões não funcionam</string>
+    <string name="brokenSiteCategoryContent">Falta conteúdo</string>
+    <string name="brokenSiteCategoryLogin">Não consigo iniciar sessão</string>
+    <string name="brokenSiteCategoryUnsupported">O navegador é incompatível</string>
+    <string name="brokenSiteCategoryOther">Outra coisa</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Marcadores</string>
