--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -193,6 +193,20 @@
     <string name="brokenSiteReportBrokenSiteMenuItem">Prijavite poškodovano spletno mesto</string>
     <string name="brokenSiteHeading">Prijavite poškodovano spletno mesto</string>
     <string name="brokenSiteSubmitted">Hvala! Povratne informacije so poslane</string>
+    <string name="brokenSitesCategoriesTitle">Opišite, kaj se je zgodilo:</string>
+    <string name="brokenSitesCategoriesHint">Opišite, kaj se je zgodilo</string>
+    <string name="brokenSiteSubmitButton">Pošljite poročilo</string>
+    <string name="brokenSiteDescription">Če pošljete poročilo o anonimnem pokvarjenem spletišču, nam pomagate odpraviti napake in izboljšati aplikacijo.</string>
+
+    <string name="brokenSiteCategoryImages">Slike se niso naložile</string>
+    <string name="brokenSiteCategoryPaywall">Spletišče me je prosilo, da onemogočim</string>
+    <string name="brokenSiteCategoryComments">Komentarji se niso naložili</string>
+    <string name="brokenSiteCategoryVideos">Video se ni predvajal</string>
+    <string name="brokenSiteCategoryLinks">Povezave ali tipke ne delujejo</string>
+    <string name="brokenSiteCategoryContent">Vsebina manjka</string>
+    <string name="brokenSiteCategoryLogin">Ne morem se prijaviti</string>
+    <string name="brokenSiteCategoryUnsupported">Brskalnik ni združljiv</string>
+    <string name="brokenSiteCategoryOther">Nekaj drugega</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Zaznamki</string>
