--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -205,12 +205,21 @@
     <!-- Broken Site Activity -->
     <string name="brokenSiteReportBrokenSiteMenuItem">Hatalı Siteyi Bildirin</string>
     <string name="brokenSiteHeading">Hatalı Bir Siteyi Bildirin</string>
-    <string name="brokenSiteModalDescription">Hatalı site raporlaması tamamen anonimdir ve uygulamayı geliştirmemize yardımcı olur!</string>
-    <string name="brokenSiteUrlHint">URL girin</string>
-    <string name="brokenSiteDomainLabel">Hatalı sitenin domain\'i:</string>
-    <string name="brokenSiteMessageHint">Hangi içerik veya işlev çalışmıyor?</string>
-    <string name="brokenSiteSubmitButton">Geri Bildirim Gönder</string>
     <string name="brokenSiteSubmitted">Teşekkür ederiz! Geri bildirim gönderildi</string>
+    <string name="brokenSitesCategoriesTitle">Ne olduğunu açıklayın:</string>
+    <string name="brokenSitesCategoriesHint">Ne olduğunu açıklayın</string>
+    <string name="brokenSiteSubmitButton">Rapor gönder</string>
+    <string name="brokenSiteDescription">Anonim olarak hatalı site raporu göndermeniz, bu sorunları ayıklamamıza ve uygulamayı geliştirmemize yardımcı olur.</string>
+
+    <string name="brokenSiteCategoryImages">Resimler yüklenemedi</string>
+    <string name="brokenSiteCategoryPaywall">Site benden devre dışı bırakmamı istedi</string>
+    <string name="brokenSiteCategoryComments">Yorumlar yüklenmedi</string>
+    <string name="brokenSiteCategoryVideos">Video oynatılamadı</string>
+    <string name="brokenSiteCategoryLinks">Bağlantılar veya düğmeler çalışmıyor</string>
+    <string name="brokenSiteCategoryContent">İçerik eksik</string>
+    <string name="brokenSiteCategoryLogin">Giriş yapamıyorum</string>
+    <string name="brokenSiteCategoryUnsupported">Tarayıcı uyumsuz</string>
+    <string name="brokenSiteCategoryOther">Başka bir şey</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Yer imleri</string>
