--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -184,12 +184,21 @@
     <!-- Broken Site Activity -->
     <string name="brokenSiteReportBrokenSiteMenuItem">Fehlerhafte Seite melden</string>
     <string name="brokenSiteHeading">Eine fehlerhafte Seite melden</string>
-    <string name="brokenSiteModalDescription">Das Melden fehlerhafter Seiten ist völlig anonym und hilft uns dabei, die App zu verbessern!</string>
-    <string name="brokenSiteUrlHint">URL eingeben</string>
-    <string name="brokenSiteDomainLabel">Domain der fehlerhaften Seite:</string>
-    <string name="brokenSiteMessageHint">Welche Inhalte oder Funktionen sind fehlerhaft?</string>
-    <string name="brokenSiteSubmitButton">Feedback absenden</string>
     <string name="brokenSiteSubmitted">Vielen Dank! Feedback gesendet</string>
+    <string name="brokenSitesCategoriesTitle">Beschreiben Sie, was passiert ist:</string>
+    <string name="brokenSitesCategoriesHint">Beschreiben, was passiert ist</string>
+    <string name="brokenSiteSubmitButton">Bericht senden</string>
+    <string name="brokenSiteDescription">Das Senden eines anonymen Berichts über fehlerhafte Websites hilft uns, diese Probleme zu beheben und die App zu verbessern.</string>
+
+    <string name="brokenSiteCategoryImages">Bilder wurden nicht geladen</string>
+    <string name="brokenSiteCategoryPaywall">Die Seite hat mich aufgefordert, zu deaktivieren</string>
+    <string name="brokenSiteCategoryComments">Kommentare wurden nicht geladen</string>
+    <string name="brokenSiteCategoryVideos">Video wurde nicht abgespielt</string>
+    <string name="brokenSiteCategoryLinks">Links oder Schaltflächen funktionieren nicht</string>
+    <string name="brokenSiteCategoryContent">Inhalt fehlt</string>
+    <string name="brokenSiteCategoryLogin">Ich kann mich nicht anmelden</string>
+    <string name="brokenSiteCategoryUnsupported">Der Browser ist nicht kompatibel</string>
+    <string name="brokenSiteCategoryOther">Etwas anderes</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Lesezeichen</string>
