--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -184,12 +184,21 @@
     <!-- Broken Site Activity -->
     <string name="brokenSiteReportBrokenSiteMenuItem">Prijavi neispravno web-mjesto</string>
     <string name="brokenSiteHeading">Prijavi neispravno web-mjesto</string>
-    <string name="brokenSiteModalDescription">Izvješćivanje o neispravnom web-mjestu potpuno je anonimno i pomaže nam poboljšati aplikaciju!</string>
-    <string name="brokenSiteUrlHint">Unesi URL</string>
-    <string name="brokenSiteDomainLabel">Domena neispravnog web-mjesta:</string>
-    <string name="brokenSiteMessageHint">Koji sadržaj ili funkcionalnost je neispravan?</string>
-    <string name="brokenSiteSubmitButton">Pošalji povratne informacije</string>
     <string name="brokenSiteSubmitted">Hvala! Povratne informacije su poslane</string>
+    <string name="brokenSitesCategoriesTitle">Opišite što se dogodilo:</string>
+    <string name="brokenSitesCategoriesHint">Opišite što se dogodilo</string>
+    <string name="brokenSiteSubmitButton">Pošalji izvješće</string>
+    <string name="brokenSiteDescription">Slanje anonimnog izvješća o neispravnom web-mjestu pomaže nam da ispravimo te probleme i poboljšamo aplikaciju.</string>
+
+    <string name="brokenSiteCategoryImages">Slike se nisu učitale</string>
+    <string name="brokenSiteCategoryPaywall">Web-mjesto je zatražilo da onemogućim</string>
+    <string name="brokenSiteCategoryComments">Komentari se nisu učitali</string>
+    <string name="brokenSiteCategoryVideos">Videozapis se nije reproducirao</string>
+    <string name="brokenSiteCategoryLinks">Veze ili gumbi ne funkcioniraju</string>
+    <string name="brokenSiteCategoryContent">Nedostaje sadržaj</string>
+    <string name="brokenSiteCategoryLogin">Ne mogu se prijaviti</string>
+    <string name="brokenSiteCategoryUnsupported">Preglednik nije kompatibilan</string>
+    <string name="brokenSiteCategoryOther">Nešto drugo</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Knjižne oznake</string>
