--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -192,12 +192,21 @@
     <!-- Broken Site Activity -->
     <string name="brokenSiteReportBrokenSiteMenuItem">Zgłoś wadliwą stronę</string>
     <string name="brokenSiteHeading">Zgłoś wadliwą stronę</string>
-    <string name="brokenSiteModalDescription">Zgłoszenie wadliwej strony przekazywane jest całkowicie anonimowo i pomaga nam usprawnić aplikację!</string>
-    <string name="brokenSiteUrlHint">Wpisz adres URL</string>
-    <string name="brokenSiteDomainLabel">Domena wadliwej strony:</string>
-    <string name="brokenSiteMessageHint">Jaka treść lub funkcja nie działa poprawnie?</string>
-    <string name="brokenSiteSubmitButton">Przekaż opinię</string>
     <string name="brokenSiteSubmitted">Dziękujemy! Informacje zostały przekazane</string>
+    <string name="brokenSitesCategoriesTitle">Opisz, co się stało:</string>
+    <string name="brokenSitesCategoriesHint">Opisz co się stało</string>
+    <string name="brokenSiteSubmitButton">Wyślij raport</string>
+    <string name="brokenSiteDescription">Przesłanie anonimowego raportu o uszkodzonej witrynie pomaga nam debugować te problemy i ulepszać aplikację.</string>
+
+    <string name="brokenSiteCategoryImages">Obrazy nie zostały załadowane</string>
+    <string name="brokenSiteCategoryPaywall">Witryna poprosiła mnie o wyłączenie</string>
+    <string name="brokenSiteCategoryComments">Komentarze nie zostały załadowane</string>
+    <string name="brokenSiteCategoryVideos">Film nie został odtworzony</string>
+    <string name="brokenSiteCategoryLinks">Linki lub przyciski nie działają</string>
+    <string name="brokenSiteCategoryContent">Brakuje treści</string>
+    <string name="brokenSiteCategoryLogin">Nie mogę się zalogować</string>
+    <string name="brokenSiteCategoryUnsupported">Przeglądarka jest niezgodna</string>
+    <string name="brokenSiteCategoryOther">Coś innego</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Zakładki</string>
