--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,12 +191,21 @@
     <!-- Broken Site Activity -->
     <string name="brokenSiteReportBrokenSiteMenuItem">Report Broken Site</string>
     <string name="brokenSiteHeading">Report a Broken Site</string>
-    <string name="brokenSiteModalDescription">Broken site reporting is completely anonymous and helps us improve the app!</string>
-    <string name="brokenSiteUrlHint">Enter URL</string>
-    <string name="brokenSiteDomainLabel">Domain of broken site:</string>
-    <string name="brokenSiteMessageHint">Which content or functionality is breaking?</string>
-    <string name="brokenSiteSubmitButton">Submit Feedback</string>
     <string name="brokenSiteSubmitted">Thank you! Feedback submitted</string>
+    <string name="brokenSitesCategoriesTitle">Describe what happened:</string>
+    <string name="brokenSitesCategoriesHint">Describe what happened</string>
+    <string name="brokenSiteSubmitButton">Send Report</string>
+    <string name="brokenSiteDescription">Submitting an anonymous broken site report helps us debug these issues and improve the app.</string>
+
+    <string name="brokenSiteCategoryImages">Images didn\'t load</string>
+    <string name="brokenSiteCategoryPaywall">The site asked me to disable</string>
+    <string name="brokenSiteCategoryComments">Comments didn\'t load</string>
+    <string name="brokenSiteCategoryVideos">Video didn\'t play</string>
+    <string name="brokenSiteCategoryLinks">Links or buttons don\'t work</string>
+    <string name="brokenSiteCategoryContent">Content is missing</string>
+    <string name="brokenSiteCategoryLogin">I can\'t login</string>
+    <string name="brokenSiteCategoryUnsupported">The browser is incompatible</string>
+    <string name="brokenSiteCategoryOther">Something else</string>
 
     <!-- Bookmarks Activity -->
     <string name="bookmarksMenuTitle">Bookmarks</string>
